--- a/index.html
+++ b/index.html
@@ -5,8 +5,38 @@
         <tittle>Run Buddy</tittle>
     </head>
     <body>
-        <h3>RUN BUDDY</h3>
-        What We Do What You Do Your Trainers Reach Out
+    <!-- navigation -->
+        <header> 
+            <h1>RUN BUDDY</h1>
+        </header>
+    <!-- hero/jumbotron-->
+    <section>
+
+    </section>
+
+    <!-- "what we do" section-->
+    <section>
+        <h2>What We Do</h2>
+    </section>
+    <!-- "what you do" section-->
+    <section>
+        <2>What You Do</2>
+    </section>
+    <!-- "meet the trainers" section-->
+    <section>
+        <h2>Meet the Trainers</h2>
+    </section>
+
+    <!-- "Reach Out" section-->
+    <section>
+        <h2>Reach Out</h2>
+    </section>
+
+    <!-- footer-->
+    <footer>
+        <h2> ❤️ Made with love by Run Buddy.</h2>
+    </footer>   
+
     </body>
 
 
