--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <body>
     <!-- navigation -->
         <header> 
-            <h1>RUN BUDDY</h1>
+            <h1>
+                <a href="/">RUN BUDDY</a>
+            </h1>
             <nav>
                 <!-- Unordered list element-->
                 <ul>
@@ -39,7 +41,7 @@
     </section>
     <!-- "what you do" section-->
     <section>
-        <2>What You Do</2>
+        <h2>What You Do</h2>
     </section>
     <!-- "meet the trainers" section-->
     <section>
